cluster/apps/storage/snapshot-controller/networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: snapshot-controller
  namespace: kube-system
spec:
  description: Allow Kubernetes API access and VictoriaMetrics scraping
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: snapshot-controller
      app.kubernetes.io/name: snapshot-controller
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: vmagent
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
  enableDefaultDeny:
    ingress: true
    egress: true
  log:
    value: snapshot-controller
